src/test/deca/syntax/parser/invalid/decl_var_type_string.deca
// Test de parser, le type n'est pas valide, mais est une string
// à la place

{
    "int" x = 5;
}